# EventEngine

./: CMakeLists-mylogger.txt  CMakeLists.txt  README  README.md
include/: event.h  eventengine.h  rule.h
src/: event.cpp  eventengine.cpp  rule.cpp
test/: main.cpp
